--- a/src/app/product-display/product-list/product-list.component.css
+++ b/src/app/product-display/product-list/product-list.component.css
@@ -1,4 +1,4 @@
-#product-display{
+/* #product-display{
     background-color: white;
   }
 
@@ -99,4 +99,4 @@ a {
 
 #add-product{
   display: none;
-}
+} */
