--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-html,body{
+/* html,body{
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -153,4 +153,4 @@ a {
 
 #add-product{
   display: none;
-}
+} */
