--- a/src/app/cart-handler/cart-list/cart-list.component.html
+++ b/src/app/cart-handler/cart-list/cart-list.component.html
@@ -1,4 +1,5 @@
-<div id="product-display">
+<p-message severity="success">Total: {{total}}</p-message>
+<!-- <div id="product-display">
     <ul id="product-area">
         <h1 id="totalPrice">Total: {{total}}</h1>
         <ng-container *ngFor="let p of cartList">
@@ -19,4 +20,61 @@
             </li>
         </ng-container>
     </ul>
+</div> -->
+
+<div class="card">
+    <p-dataview #dv [value]="cartList" [layout]="'grid'">
+    <ng-template #grid let-items>
+        <div class="grid grid-cols-12 gap-4" style="margin-left: 200px; margin-right: 200px;">
+            <div *ngFor="let product of items" class="col-span-12 sm:col-span-6 md:col-span-4 xl:col-span-6 p-2">
+                <div
+                    class="p-6 border border-surface-200 dark:border-surface-700 bg-surface-0 dark:bg-surface-900 rounded flex flex-col"
+                >
+                    <div class="bg-surface-50 flex justify-center rounded p-4">
+                        <div class="relative mx-auto">
+                            <img
+                                class="rounded w-full"
+                                [src]="product.image"
+                                [alt]="product.name"
+                                style="max-width: 400px; max-height: 200px;"
+                            />
+                        </div>
+                    </div>
+                    <div class="pt-6">
+                        <div class="flex flex-row justify-between products-start gap-2">
+                            <div>
+                                <span class="font-medium text-surface-500 dark:text-surface-400 text-sm">{{
+                                    product.category | uppercase
+                                }}</span>
+                                <div class="text-lg font-medium mt-1">{{ product.name | uppercase}}</div>
+                                <div class="text-sm font-medium mt-1">Quantity: {{ product.quantity }}</div>
+                            </div>
+                            <div class="bg-surface-100 p-1" style="border-radius: 30px; height:100%">
+                                <div
+                                    class="bg-surface-0 flex products-center gap-2 justify-center py-1 px-2"
+                                    style="border-radius: 30px; box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.04), 0px 1px 2px 0px rgba(0, 0, 0, 0.06)"
+                                >
+                                    <span class="text-surface-900 font-medium text-sm">{{ product.rating }}</span>
+                                    <i class="pi pi-star-fill text-yellow-500"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-col gap-6 mt-6">
+                            <span class="text-2xl font-semibold">{{ product.price | currency: 'INR' }}</span>
+                            <div class="flex gap-2">
+                                <button
+                                    pButton
+                                    icon="pi pi-shopping-cart"
+                                    label="Order"
+                                    class="flex-auto whitespace-nowrap"
+                                ></button>
+                                <button (click)="removeFromCart(product.id)" pButton icon="pi pi-cart-minus" outlined></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ng-template>
+    </p-dataview>
 </div>
