--- a/src/app/product-display/product-list/product-list.component.html
+++ b/src/app/product-display/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<div id="product-display">
+<!-- <div id="product-display">
     <ul id="product-area">
         <ng-container *ngFor="let p of productList">
             <li id="product">
@@ -19,4 +19,85 @@
             </li>
         </ng-container>
     </ul>
+</div> -->
+
+<!-- Prime NG -->
+<p-toast />
+<ng-template productInfo>
+    <!-- <div style="position: fixed;  z-index: 10; overflow: hidden;" class="mb-4 p-8 flex items-center justify-center">
+        <p-card [style]="{ width: '50rem', overflow: 'hidden' }">
+            <ng-template #header>
+                <img alt="Card" class="w-full" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
+            </ng-template>
+            <ng-template #title> Advanced Card </ng-template>
+            <ng-template #subtitle> Card subtitle </ng-template>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+                quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!
+            </p>
+            <ng-template #footer>
+                <div class="flex gap-4 mt-1">
+                    <p-button (onClick)="closeInfoCard()" label="Cancel" severity="secondary" class="w-full" [outlined]="true" styleClass="w-full" />
+                    <p-button label="Save" class="w-full" styleClass="w-full" />
+                </div>
+            </ng-template>
+        </p-card>
+    </div> -->
+</ng-template>
+<div class="card" style="position: relative;">
+    <p-dataview #dv [value]="productList" [layout]="'grid'">
+    <ng-template #grid let-items>
+        <div  class="grid grid-cols-12 gap-4" style="margin-left: 200px; margin-right: 200px;">
+            <div *ngFor="let product of items" class="col-span-12 sm:col-span-6 md:col-span-4 xl:col-span-6 p-2">
+                <div
+                    class="p-6 border border-surface-200 dark:border-surface-700 bg-surface-0 dark:bg-surface-700 rounded flex flex-col"
+                >
+                    <div class="bg-surface-0 flex justify-center rounded p-4">
+                        <div class="relative mx-auto">
+                            <img 
+                                (click)="openInfoCard(product)"
+                                class="rounded w-full"
+                                [src]="product.image"
+                                [alt]="product.name"
+                                style="max-width: 400px; max-height: 200px;"
+                            />
+                        </div>
+                    </div>
+                    <div class="pt-6">
+                        <div class="flex flex-row justify-between products-start gap-2">
+                            <div>
+                                <span class="font-medium text-surface-500 dark:text-surface-400 text-sm">{{
+                                    product.category | uppercase
+                                }}</span>
+                                <div (click)="openInfoCard(product)" class="text-lg font-medium mt-1">{{ product.name | uppercase}}</div>
+                            </div>
+                            <div class="bg-surface-100 p-1" style="border-radius: 30px; height:100%">
+                                <div
+                                    class="bg-surface-0 flex products-center gap-2 justify-center py-1 px-2"
+                                    style="border-radius: 30px; box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.04), 0px 1px 2px 0px rgba(0, 0, 0, 0.06)"
+                                >
+                                    <span class="text-surface-900 font-medium text-sm">{{ product.rating }}</span>
+                                    <i class="pi pi-star-fill text-yellow-500"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-col gap-6 mt-6">
+                            <span class="text-2xl font-semibold">{{ product.price | currency: 'INR' }}</span>
+                            <div class="flex gap-2">
+                                <button
+                                    pButton
+                                    icon="pi pi-shopping-cart"
+                                    label="Add to Cart"
+                                    class="flex-auto whitespace-nowrap"
+                                    (click)="addCart(product.id)"
+                                ></button>
+                                <!-- <button (click)="addCart(product.id)" pButton icon="pi pi-cart-plus" outlined></button> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ng-template>
+    </p-dataview>
 </div>
