generic form component

--- a/src/app/user/user-register/user-register.component.html
+++ b/src/app/user/user-register/user-register.component.html
@@ -37,4 +37,15 @@
           <p>Already have an account? <a routerLink="../login">Sign in</a>.</p>
         </div>
       </form>
+
+      <!-- <app-generic-form
+        [formGroup]="registerForm"
+        [onSubmit]="checkFormData.bind(this)"
+        title="User Registration"
+        description="Please fill in this form to create an account."
+        submitButtonText="Register"
+        redirectText="Already have an account?"
+        redirectLink="../login"
+        redirectLinkText="Sign in">
+      </app-generic-form> -->
 </div>
